--- a/stylesheets/overrides.css
+++ b/stylesheets/overrides.css
@@ -1,3 +1,4 @@
 h4 {font-size: 110%;}
 figcaption {font-size: x-small; font-family: serif; color: dimgray;}
 .breadcrumb {font-size: small;}  
+.graphic {margin:auto; max-width:90%}
