--- a/stylesheets/overrides.css
+++ b/stylesheets/overrides.css
@@ -1,4 +1,5 @@
 h4 {font-size: 110%;}
 figcaption {font-size: x-small; font-family: serif; color: dimgray;}
-.breadcrumb {font-size: small;}  
+.breadcrumb {font-size: small;}
 .graphic {margin:auto; max-width:90%}
+article {max-width: 64ch; margin:auto}
